// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`distinguish by props 1`] = `
[
  [
    0,
    120667947,
    "sample",
  ],
  [
    0,
    949666729,
    "seq",
  ],
  [
    0,
    998409329,
    "phasor",
  ],
  [
    0,
    1181055054,
    "const",
  ],
  [
    0,
    1199483372,
    "root",
  ],
  [
    0,
    1220787459,
    "root",
  ],
  [
    0,
    1229809873,
    "seq",
  ],
  [
    0,
    1497369747,
    "sample",
  ],
  [
    0,
    1557538697,
    "const",
  ],
  [
    0,
    2118771019,
    "le",
  ],
  [
    2,
    120667947,
    949666729,
    0,
  ],
  [
    2,
    949666729,
    2118771019,
    0,
  ],
  [
    2,
    998409329,
    1557538697,
    0,
  ],
  [
    2,
    1199483372,
    120667947,
    0,
  ],
  [
    2,
    1220787459,
    1497369747,
    0,
  ],
  [
    2,
    1229809873,
    2118771019,
    0,
  ],
  [
    2,
    1497369747,
    1229809873,
    0,
  ],
  [
    2,
    2118771019,
    998409329,
    0,
  ],
  [
    2,
    2118771019,
    1181055054,
    0,
  ],
  [
    3,
    120667947,
    "path",
    "test/path.wav",
  ],
  [
    3,
    949666729,
    "seq",
    [
      0,
      0,
      1,
    ],
  ],
  [
    3,
    1181055054,
    "value",
    0.5,
  ],
  [
    3,
    1199483372,
    "channel",
    0,
  ],
  [
    3,
    1199483372,
    "fadeInMs",
    20,
  ],
  [
    3,
    1199483372,
    "fadeOutMs",
    20,
  ],
  [
    3,
    1220787459,
    "channel",
    1,
  ],
  [
    3,
    1220787459,
    "fadeInMs",
    20,
  ],
  [
    3,
    1220787459,
    "fadeOutMs",
    20,
  ],
  [
    3,
    1229809873,
    "seq",
    [
      0,
      1,
      0,
    ],
  ],
  [
    3,
    1497369747,
    "path",
    "test/path.wav",
  ],
  [
    3,
    1557538697,
    "value",
    2,
  ],
  [
    4,
    [
      1199483372,
      1220787459,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`distinguished subtrees by key 1`] = `
[
  [
    0,
    136690755,
    "root",
  ],
  [
    0,
    371590287,
    "mul",
  ],
  [
    0,
    472261513,
    "phasor",
  ],
  [
    0,
    549707649,
    "mul",
  ],
  [
    0,
    555467758,
    "const",
  ],
  [
    0,
    650660620,
    "mul",
  ],
  [
    0,
    765455487,
    "sin",
  ],
  [
    0,
    1007055215,
    "phasor",
  ],
  [
    0,
    1057677500,
    "phasor",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1193164375,
    "const",
  ],
  [
    0,
    1427558172,
    "const",
  ],
  [
    0,
    1478357524,
    "sin",
  ],
  [
    0,
    1609650518,
    "sin",
  ],
  [
    0,
    1661951969,
    "const",
  ],
  [
    0,
    1802191769,
    "sin",
  ],
  [
    0,
    1875532204,
    "add",
  ],
  [
    0,
    1933267990,
    "mul",
  ],
  [
    0,
    2030160862,
    "phasor",
  ],
  [
    2,
    136690755,
    1875532204,
    0,
  ],
  [
    2,
    371590287,
    1097289128,
    0,
  ],
  [
    2,
    371590287,
    2030160862,
    0,
  ],
  [
    2,
    472261513,
    1661951969,
    0,
  ],
  [
    2,
    549707649,
    1097289128,
    0,
  ],
  [
    2,
    549707649,
    1057677500,
    0,
  ],
  [
    2,
    650660620,
    1097289128,
    0,
  ],
  [
    2,
    650660620,
    472261513,
    0,
  ],
  [
    2,
    765455487,
    650660620,
    0,
  ],
  [
    2,
    1007055215,
    1193164375,
    0,
  ],
  [
    2,
    1057677500,
    1427558172,
    0,
  ],
  [
    2,
    1478357524,
    371590287,
    0,
  ],
  [
    2,
    1609650518,
    549707649,
    0,
  ],
  [
    2,
    1802191769,
    1933267990,
    0,
  ],
  [
    2,
    1875532204,
    1609650518,
    0,
  ],
  [
    2,
    1875532204,
    1802191769,
    0,
  ],
  [
    2,
    1875532204,
    1478357524,
    0,
  ],
  [
    2,
    1875532204,
    765455487,
    0,
  ],
  [
    2,
    1933267990,
    1097289128,
    0,
  ],
  [
    2,
    1933267990,
    1007055215,
    0,
  ],
  [
    2,
    2030160862,
    555467758,
    0,
  ],
  [
    3,
    136690755,
    "channel",
    0,
  ],
  [
    3,
    136690755,
    "fadeInMs",
    20,
  ],
  [
    3,
    136690755,
    "fadeOutMs",
    20,
  ],
  [
    3,
    555467758,
    "key",
    "fq3",
  ],
  [
    3,
    555467758,
    "value",
    440,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1193164375,
    "key",
    "fq2",
  ],
  [
    3,
    1193164375,
    "value",
    440,
  ],
  [
    3,
    1427558172,
    "key",
    "fq1",
  ],
  [
    3,
    1427558172,
    "value",
    440,
  ],
  [
    3,
    1661951969,
    "key",
    "fq4",
  ],
  [
    3,
    1661951969,
    "value",
    440,
  ],
  [
    4,
    [
      136690755,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`multi-channel basics 1`] = `
[
  [
    0,
    897687670,
    "mul",
  ],
  [
    0,
    912820239,
    "phasor",
  ],
  [
    0,
    941119466,
    "root",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1709217017,
    "sin",
  ],
  [
    0,
    1709345783,
    "const",
  ],
  [
    0,
    1762002297,
    "root",
  ],
  [
    2,
    897687670,
    1097289128,
    0,
  ],
  [
    2,
    897687670,
    912820239,
    0,
  ],
  [
    2,
    912820239,
    1709345783,
    0,
  ],
  [
    2,
    941119466,
    1709217017,
    0,
  ],
  [
    2,
    1709217017,
    897687670,
    0,
  ],
  [
    2,
    1762002297,
    1709217017,
    0,
  ],
  [
    3,
    941119466,
    "channel",
    0,
  ],
  [
    3,
    941119466,
    "fadeInMs",
    20,
  ],
  [
    3,
    941119466,
    "fadeOutMs",
    20,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1709345783,
    "key",
    "fq",
  ],
  [
    3,
    1709345783,
    "value",
    440,
  ],
  [
    3,
    1762002297,
    "channel",
    1,
  ],
  [
    3,
    1762002297,
    "fadeInMs",
    20,
  ],
  [
    3,
    1762002297,
    "fadeOutMs",
    20,
  ],
  [
    4,
    [
      941119466,
      1762002297,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`numeric literals 1`] = `
[
  [
    0,
    198353271,
    "const",
  ],
  [
    0,
    718495594,
    "root",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1131011062,
    "mul",
  ],
  [
    0,
    1151416953,
    "sin",
  ],
  [
    0,
    1734917263,
    "phasor",
  ],
  [
    2,
    718495594,
    1151416953,
    0,
  ],
  [
    2,
    1131011062,
    1097289128,
    0,
  ],
  [
    2,
    1131011062,
    1734917263,
    0,
  ],
  [
    2,
    1151416953,
    1131011062,
    0,
  ],
  [
    2,
    1734917263,
    198353271,
    0,
  ],
  [
    3,
    198353271,
    "value",
    440,
  ],
  [
    3,
    718495594,
    "channel",
    0,
  ],
  [
    3,
    718495594,
    "fadeInMs",
    20,
  ],
  [
    3,
    718495594,
    "fadeOutMs",
    20,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    4,
    [
      718495594,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`simple sharing 1`] = `
[
  [
    0,
    1442301653,
    "tanh",
  ],
  [
    0,
    1913768174,
    "root",
  ],
  [
    2,
    1442301653,
    1709217017,
    0,
  ],
  [
    2,
    1913768174,
    1442301653,
    0,
  ],
  [
    3,
    1913768174,
    "channel",
    0,
  ],
  [
    3,
    1913768174,
    "fadeInMs",
    20,
  ],
  [
    3,
    1913768174,
    "fadeOutMs",
    20,
  ],
  [
    4,
    [
      1913768174,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`structural equality with value change 1`] = `
[
  [
    3,
    1427558172,
    "value",
    441,
  ],
  [
    5,
  ],
]
`;

exports[`switch and switch back 1`] = `
[
  [
    4,
    [
      90846148,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`the basics 1`] = `
[
  [
    0,
    897687670,
    "mul",
  ],
  [
    0,
    912820239,
    "phasor",
  ],
  [
    0,
    941119466,
    "root",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1709217017,
    "sin",
  ],
  [
    0,
    1709345783,
    "const",
  ],
  [
    2,
    897687670,
    1097289128,
    0,
  ],
  [
    2,
    897687670,
    912820239,
    0,
  ],
  [
    2,
    912820239,
    1709345783,
    0,
  ],
  [
    2,
    941119466,
    1709217017,
    0,
  ],
  [
    2,
    1709217017,
    897687670,
    0,
  ],
  [
    3,
    941119466,
    "channel",
    0,
  ],
  [
    3,
    941119466,
    "fadeInMs",
    20,
  ],
  [
    3,
    941119466,
    "fadeOutMs",
    20,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1709345783,
    "key",
    "fq",
  ],
  [
    3,
    1709345783,
    "value",
    440,
  ],
  [
    4,
    [
      941119466,
    ],
  ],
  [
    5,
  ],
]
`;
